finalizing pt 7 - fix overflow  commision, selectedButton bg

--- a/shared.css
+++ b/shared.css
@@ -14,15 +14,16 @@ body{
 
 /* ============================================== MAIN MENU ============================================== */
 .buttonContainer{
+    position: fixed;
+    bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
     min-width: 60vw;
+    padding: 0px 5px;
+
     background-color:#fff;
     color: #000;
     border-radius: 100vh;
-    padding: 0px 5px;
-    position: fixed;
-    bottom: 5%;
     mix-blend-mode: lighten;
 }
 @media only screen and (max-width: 1200px) {
@@ -48,7 +49,7 @@ body{
     -webkit-appearance: none;
     flex: 1; /* This property makes the buttons stretch to fill available space */
     /* margin: 0 5px; */
-    font-family: "Noto Serif", serif;
+    font-family: serif;
     font-weight: 600;    
     /* color: #444; */
     font-size: min(19px,3vw,5vh);
@@ -68,7 +69,6 @@ body{
 }
 #selectedButton{
     color: #000;
-    background-color: #fff;
     font-weight: 1000 ;
     cursor: default;
 }
